--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=427
-dock_hsplit_3=-446
+dock_hsplit_3=-504
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=420
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Media/UserInterface/Wrench.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Accent Button/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Fonts/SF Pro/")
+dock_filesystem_selected_paths=PackedStringArray("res://Media/Audio/Sounds/KinneyJumpscare/fnaf1.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Accent Button/", "res://Scripts/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/SF Pro/", "res://Media/Audio/", "res://Media/Audio/Sounds/", "res://Media/Audio/Sounds/KinneyJumpscare/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -34,12 +34,12 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/PlayButton.gd"]
-selected_script="res://Scripts/PlayButton.gd"
+open_scripts=["res://Scripts/KinneyJumpscare.gd", "res://Scripts/PlayButton.gd"]
+selected_script="res://Scripts/KinneyJumpscare.gd"
 open_help=["Button", "String", "Tween"]
 script_split_offset=122
 list_split_offset=0
-zoom_factor=1.05825
+zoom_factor=1.06301
 
 [ShaderEditor]
 
