--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 41.16,
+"row": 151,
+"scroll_position": 125.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -24,4 +24,18 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Plain Text"
+}
+
+[res://Scripts/KinneyJumpscare.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
