--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=427
+dock_hsplit_2=467
 dock_hsplit_3=-504
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=420
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/Accent Button/", "res://Shaders/", "res://Scripts/", "res://Media/", "res://Media/Audio/", "res://Media/Audio/Sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://Media/Fonts/SF Pro/SF-Pro-Display-Regular.otf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/", "res://ThemeOverrides/TextEdit/", "res://ThemeOverrides/DefaultButton/", "res://Shaders/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Fonts/SF Pro/", "res://Media/Audio/Sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,12 +30,12 @@ current_scene="res://Scenes/MainMenu.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=7
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/KinneyJumpscare.gd", "res://Scripts/PlayButton.gd"]
-selected_script="res://Scripts/PlayButton.gd"
+open_scripts=["res://Scripts/MainMenu/KinneyJumpscare.gd", "res://Scripts/MainMenu/PlayButton.gd", "res://README.md"]
+selected_script="res://README.md"
 open_help=[]
 script_split_offset=122
 list_split_offset=0
