--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,25 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 59,
-"scroll_position": 125.0,
+"scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/MainMenu/CustomizeStartButton.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 29.76,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 35,
+"selection_to_column": 0,
+"selection_to_line": 36,
 "syntax_highlighter": "GDScript"
 }
