--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Media/Fonts/SF Pro/SF-Pro-Display-Bold.otf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/", "res://ThemeOverrides/TextEdit/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Accent Button/", "res://Shaders/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Fonts/SF Pro/", "res://Media/Audio/Sounds/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/TextEdit/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Accent Button/", "res://Shaders/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Audio/Sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scripts/MainMenu/CustomizeStartButton.gd"]
 selected_script="res://Scripts/MainMenu/CustomizeStartButton.gd"
-open_help=["String"]
+open_help=["Array", "String"]
 script_split_offset=122
 list_split_offset=0
 zoom_factor=1.06301
