--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,15 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 29.76,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 35,
-"selection_to_column": 0,
-"selection_to_line": 36,
+"row": 70,
+"scroll_position": 33.42,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
