--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Media/Fonts/SF Pro/SF-Pro-Display-Bold.otf")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/MainMenu/CustomizeCloseButton.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/TextEdit/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Accent Button/", "res://Shaders/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Audio/Sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,13 +28,13 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn")
 current_scene="res://Scenes/MainMenu.tscn"
 center_split_offset=-257
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/MainMenu/CustomizeStartButton.gd"]
+open_scripts=["res://Scripts/MainMenu/CustomizeCloseButton.gd", "res://Scripts/MainMenu/Customize.gd", "res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/MainMenu/PlayButton.gd"]
 selected_script="res://Scripts/MainMenu/CustomizeStartButton.gd"
 open_help=["Array", "String"]
 script_split_offset=122
