--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,33 +10,33 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=467
-dock_hsplit_3=-504
+dock_hsplit_3=-599
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=420
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/MainMenu/CustomizeCloseButton.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/TextEdit/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Accent Button/", "res://Shaders/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Audio/Sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/GameCustomize.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/", "res://ThemeOverrides/TextEdit/", "res://Shaders/", "res://Scripts/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Audio/Sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn")
-current_scene="res://Scenes/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameDefault.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn", "res://Scenes/GameCustomize.tscn")
+current_scene="res://Scenes/GameCustomize.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/MainMenu/Customize.gd", "res://Scripts/MainMenu/CustomizeCloseButton.gd", "res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/MainMenu/PlayButton.gd"]
-selected_script="res://Scripts/MainMenu/CustomizeCloseButton.gd"
-open_help=["Array", "String"]
+open_scripts=[]
+selected_script=""
+open_help=[]
 script_split_offset=122
 list_split_offset=0
 zoom_factor=1.06301
