--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/NodeCollections/LetterSquare.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainMenu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://Scripts/", "res://Scripts/GameCustomize/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Media/", "res://Media/Fonts/", "res://Media/Audio/Sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/GameCustomize.tscn", "res://Scenes/NodeCollections/Row.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn")
+open_scenes=PackedStringArray("res://Scenes/GameCustomize.tscn", "res://Scenes/NodeCollections/Row.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn", "res://Scenes/GameDefault.tscn", "res://Scenes/MainMenu.tscn")
 current_scene="res://Scenes/GameCustomize.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/GameCustomize/GameCustomize.gd", "res://Scripts/LetterSquare/LetterSquare.gd", "res://Scripts/LetterSquare/LetterSquareRow.gd", "res://Scripts/GameCustomize/WordSubmission.gd"]
+open_scripts=["res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/GameCustomize/GameCustomize.gd", "res://Scripts/LetterSquare/LetterSquare.gd", "res://Scripts/LetterSquare/LetterSquareRow.gd", "res://Scripts/GameCustomize/WordSubmission.gd"]
 selected_script="res://Scripts/LetterSquare/LetterSquareRow.gd"
 open_help=["Node", "String"]
 script_split_offset=295
