--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 78,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -87,16 +87,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 8.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 27,
-"selection_to_column": 13,
-"selection_to_line": 27,
+"row": 42,
+"scroll_position": 20.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -123,10 +119,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 12,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -137,16 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 13.0,
+"row": 20,
+"scroll_position": 2.0,
 "selection": true,
-"selection_from_column": 5,
-"selection_from_line": 7,
-"selection_to_column": 12,
-"selection_to_line": 7,
+"selection_from_column": 1,
+"selection_from_line": 20,
+"selection_to_column": 14,
+"selection_to_line": 20,
 "syntax_highlighter": "GDScript"
 }
 
@@ -155,11 +151,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 7,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 29,
-"scroll_position": 8.0,
+"h_scroll_position": 18,
+"row": 34,
+"scroll_position": 24.26,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
