--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=478
-dock_hsplit_3=-536
+dock_hsplit_3=-510
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=420
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainMenu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Button - General/", "res://Scripts/", "res://Scripts/LetterSquare/", "res://Scripts/GameCustomize/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Media/", "res://Media/UserInterface/", "res://Media/Fonts/", "res://Media/Audio/", "res://Media/Audio/Sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/NodeCollections/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Button - General/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Scripts/LetterSquare/", "res://Scripts/GameCustomize/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Media/", "res://Media/UserInterface/", "res://Media/Sprites/", "res://Media/Fonts/", "res://Media/Audio/", "res://Media/Audio/Sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,14 +27,14 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameCustomize.tscn", "res://Scenes/NodeCollections/Row.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn")
 current_scene="res://Scenes/MainMenu.tscn"
-center_split_offset=-257
+center_split_offset=-431
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/GameCustomize/BackButton.gd", "res://Scripts/MainMenu/Customize.gd", "res://Scripts/MainMenu/CustomizeCloseButton.gd", "res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/GameCustomize/GameCustomize.gd", "res://Scripts/MainMenu/KinneyJumpscare.gd", "res://Scripts/LetterSquare/LetterSquare.gd", "res://Scripts/LetterSquare/LetterSquareRow.gd", "res://Scripts/MainMenu/PlayButton.gd", "res://Scripts/MainMenu/Settings.gd", "res://Scripts/GameCustomize/WordSubmission.gd"]
+open_scripts=["res://Scripts/GameCustomize/BackButton.gd", "res://Scripts/MainMenu/Customize.gd", "res://Scripts/MainMenu/CustomizeCloseButton.gd", "res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/GameCustomize/GameCustomize.gd", "res://Scripts/GlobalVariables.gd", "res://Scripts/MainMenu/KinneyJumpscare.gd", "res://Scripts/LetterSquare/LetterSquare.gd", "res://Scripts/LetterSquare/LetterSquareRow.gd", "res://Scripts/MainMenu/OpenSettingsButton.gd", "res://Scripts/MainMenu/PlayButton.gd", "res://Scripts/MainMenu/Settings.gd", "res://Scripts/GameCustomize/WordSubmission.gd"]
 selected_script="res://Scripts/MainMenu/Settings.gd"
 open_help=[]
 script_split_offset=232
