--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,20 +17,19 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/NodeCollections/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Button - General/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Scripts/LetterSquare/", "res://Scripts/GameCustomize/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Media/", "res://Media/UserInterface/", "res://Media/Sprites/", "res://Media/Fonts/", "res://Media/Audio/", "res://Media/Audio/Sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://Media/Audio/Sounds/MainMenu/undertale button hover.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Button - General/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Scripts/LetterSquare/", "res://Scripts/GameCustomize/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Scenes/NodeCollections/Audio/", "res://Scenes/NodeCollections/Audio/MainMenu/", "res://Media/", "res://Media/Sprites/", "res://Media/Fonts/", "res://Media/Audio/", "res://Media/Audio/Sounds/", "res://Media/Audio/Sounds/MainMenu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameCustomize.tscn", "res://Scenes/NodeCollections/Row.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn")
-current_scene="res://Scenes/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/NodeCollections/Audio/MainMenu/MainMenuSFX.tscn", "res://Scenes/GameCustomize.tscn", "res://Scenes/NodeCollections/Row.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn")
+current_scene="res://Scenes/NodeCollections/Audio/MainMenu/MainMenuSFX.tscn"
 center_split_offset=-431
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
