--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Media/Audio/Sounds/MainMenu/undertale button hover.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Button - General/", "res://Scripts/", "res://Scripts/MainMenu/", "res://Scripts/LetterSquare/", "res://Scripts/GameCustomize/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Scenes/NodeCollections/Audio/", "res://Scenes/NodeCollections/Audio/MainMenu/", "res://Media/", "res://Media/Sprites/", "res://Media/Fonts/", "res://Media/Audio/", "res://Media/Audio/Sounds/", "res://Media/Audio/Sounds/MainMenu/")
+dock_filesystem_selected_paths=PackedStringArray("res://DataSaves/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ThemeOverrides/LetterSquare/", "res://ThemeOverrides/DefaultButton/", "res://ThemeOverrides/Button - General/", "res://Scripts/", "res://Scenes/", "res://Scenes/NodeCollections/", "res://Scenes/NodeCollections/Audio/", "res://Scenes/NodeCollections/Audio/MainMenu/", "res://Media/", "res://Media/Sprites/", "res://Media/Fonts/", "res://Media/Audio/", "res://Media/Audio/Sounds/", "res://Media/Audio/Sounds/MainMenu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,14 +26,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/NodeCollections/Audio/MainMenu/MainMenuSFX.tscn", "res://Scenes/GameCustomize.tscn", "res://Scenes/NodeCollections/Row.tscn", "res://Scenes/NodeCollections/LetterSquare.tscn")
-current_scene="res://Scenes/NodeCollections/Audio/MainMenu/MainMenuSFX.tscn"
+current_scene="res://Scenes/MainMenu.tscn"
 center_split_offset=-431
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/GameCustomize/BackButton.gd", "res://Scripts/MainMenu/Customize.gd", "res://Scripts/MainMenu/CustomizeCloseButton.gd", "res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/GameCustomize/GameCustomize.gd", "res://Scripts/GlobalVariables.gd", "res://Scripts/MainMenu/KinneyJumpscare.gd", "res://Scripts/LetterSquare/LetterSquare.gd", "res://Scripts/LetterSquare/LetterSquareRow.gd", "res://Scripts/MainMenu/OpenSettingsButton.gd", "res://Scripts/MainMenu/PlayButton.gd", "res://Scripts/MainMenu/Settings.gd", "res://Scripts/GameCustomize/WordSubmission.gd"]
+open_scripts=["res://Scripts/GameCustomize/BackButton.gd", "res://Scripts/MainMenu/Customize.gd", "res://Scripts/MainMenu/CustomizeCloseButton.gd", "res://Scripts/MainMenu/CustomizeStartButton.gd", "res://Scripts/DataManager.gd", "res://Scripts/GameCustomize/GameCustomize.gd", "res://Scripts/GlobalVariables.gd", "res://Scripts/MainMenu/KinneyJumpscare.gd", "res://Scripts/LetterSquare/LetterSquare.gd", "res://Scripts/LetterSquare/LetterSquareRow.gd", "res://Scripts/MainMenu/MainMenu.gd", "res://Scripts/MainMenu/OpenSettingsButton.gd", "res://Scripts/MainMenu/PlayButton.gd", "res://Scripts/MainMenu/Settings.gd", "res://Scripts/GameCustomize/WordSubmission.gd"]
 selected_script="res://Scripts/MainMenu/Settings.gd"
 open_help=[]
 script_split_offset=232
